--- a/index.html
+++ b/index.html
@@ -50,21 +50,21 @@
         <h1 class="h-primary center">Our Services</h1>
         <div id="services">
             <div class="box">
-                <img src="../Online food delivery website/images/pizza.jpg" alt="This is a pizza">
+                <img src="images/pizza.jpg" alt="This is a pizza">
                 <h2 class="h-secondary center">Food Catering</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quas perferendis rem
                     voluptatibus saepe veritatis, aliquid placeat molestias facere, fuga delectus accusamus eos maiores
                     sint.</p>
             </div>
             <div class="box">
-                <img src="../Online food delivery website/images/delivery.jpg" alt="This is a pizza">
+                <img src="images/delivery.jpg" alt="This is a pizza">
                 <h2 class="h-secondary center"> Food Delivery</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quas perferendis rem
                     voluptatibus saepe veritatis, aliquid placeat molestias facere, fuga delectus accusamus eos maiores
                     sint.</p>
             </div>
             <div class="box">
-                <img src="../Online food delivery website/images/services1.png" alt="This is a pizza">
+                <img src="images/services1.png" alt="This is a pizza">
                 <h2 class="h-secondary center">Dine inn</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quas perferendis rem
                     voluptatibus saepe veritatis, aliquid placeat molestias facere, fuga delectus accusamus eos maiores
